update March 11, 2023 at 18:08

--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-pagination.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-pagination.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
         <!-- ►►►►►►►►►►| #(TITLE) start |• -->
-        <title>Ploranza | Homepage</title>
+        <title>Ploranza | Pages</title>
         <!-- •| #(TITLE) end |◄◄◄◄◄◄◄◄◄◄ -->
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
         <!-- ►►►►►►►►►►| #(GOOGLE FONTS) start |• -->
@@ -398,181 +398,12 @@
         </section>
         <!-- •| #(SECTION 0 - BREADCRUMB) end |◄◄◄◄◄◄◄◄◄◄ -->
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
-        <!-- ►►►►►►►►►►| #(SECTION 1 - CATEGORIES) start |• -->
-        <section id="section1-categories">
-            <!-- carousels container -->
-            <div class="section1-carousels">
-                <!-- slides | slide 1 -->
-                <div class="section1-carousels__slides">
-                    <img src="." alt="section1-carousel-cover" class="section1-carousels__slides--image">
-                    <div class="section1-carousels__slides--info">
-                        <h3 class="section1-carousels__slides--info_header">Fitter, stronger, faster!</h3>
-                    </div>
-                </div>
-                <!-- slides | slide 2 -->
-                <div class="section1-carousels__slides">
-                    <img src="." alt="section1-carousel-cover" class="section1-carousels__slides--image">
-                    <div class="section1-carousels__slides--info">
-                        <h3 class="section1-carousels__slides--info_header">Shop computer & accessories</h3>
-                    </div>
-                </div>
-                <!-- slides | slide 3 -->
-                <div class="section1-carousels__slides">
-                    <img src="." alt="section1-carousel-cover" class="section1-carousels__slides--image">
-                    <div class="section1-carousels__slides--info">
-                        <h3 class="section1-carousels__slides--info_header">Refresh your home with essentials</h3>
-                    </div>
-                </div>
-            </div>
-            <!-- carousels radio buttons -->
-            <div class="section1-radios">
-                <input type="radio" id="section1-radios" name="section1-radios" class="section1-radios__dots" checked>
-                <input type="radio" id="section1-radios" name="section1-radios" class="section1-radios__dots">
-                <input type="radio" id="section1-radios" name="section1-radios" class="section1-radios__dots">
-            </div>
-            <!-- side buttons -->
-            <button class="section1-right">◄</button>
-            <button class="section1-left">►</button>
+        <!-- ►►►►►►►►►►| #($$$$$) start |• -->
+        <section id="$$$$$">
+            <aside class="$$$$$"></aside>
+            <div class="$$$$$"></div>
         </section>
-        <!-- •| #(SECTION 1 - CATEGORIES) end |◄◄◄◄◄◄◄◄◄◄ -->
-        <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
-        <!-- ►►►►►►►►►►| #(SECTION 2 - EXPLORE POPULAR CATEGORIES) start |• -->
-        <section id="section2-exppopcateg">
-            <!-- explore popular categories section -->
-            <div class="section2-exppopcateg">
-                <!-- explore popular categories section header -->
-                <h3 class="section2-exppopcateg__header">Explore Popular Categories</h3>
-                <!-- explore popular categories section cards container -->
-                <div class="section2-exppopcateg__container">
-                    <!-- explore popular categories section cards container circles 1 -->
-                    <a href="#" class="section2-exppopcateg__container--cards">
-                        <div class="section2-exppopcateg__container--cards_cover">
-                            <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
-                        </div>
-                        <p class="section2-exppopcateg__container--cards_name"></p>
-                    </a>
-                    <!-- explore popular categories section cards container circles 2 -->
-                    <a href="#" class="section2-exppopcateg__container--cards">
-                        <div class="section2-exppopcateg__container--cards_cover">
-                            <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
-                        </div>
-                        <p class="section2-exppopcateg__container--cards_name"></p>
-                    </a>
-                    <!-- explore popular categories section cards container circles 3 -->
-                    <a href="#" class="section2-exppopcateg__container--cards">
-                        <div class="section2-exppopcateg__container--cards_cover">
-                            <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
-                        </div>
-                        <p class="section2-exppopcateg__container--cards_name"></p>
-                    </a>
-                    <!-- explore popular categories section cards container circles 4 -->
-                    <a href="#" class="section2-exppopcateg__container--cards">
-                        <div class="section2-exppopcateg__container--cards_cover">
-                            <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
-                        </div>
-                        <p class="section2-exppopcateg__container--cards_name"></p>
-                    </a>
-                    <!-- explore popular categories section cards container circles 5 -->
-                    <a href="#" class="section2-exppopcateg__container--cards">
-                        <div class="section2-exppopcateg__container--cards_cover">
-                            <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
-                        </div>
-                        <p class="section2-exppopcateg__container--cards_name"></p>
-                    </a>
-                </div>
-            </div>
-        </section>
-        <!-- •| #(SECTION 2 - EXPLORE POPULAR CATEGORIES) end |◄◄◄◄◄◄◄◄◄◄ -->
-        <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
-        <!-- ►►►►►►►►►►| #(SECTION 3 - TOP SELLERS IN BOOKS FOR YOU) start |• -->
-        <section id="section3-topsellbooks">
-            <!-- top seller books container -->
-            <div class="section3-topsellbooks">
-                <!-- header -->
-                <h3 class="section3-topsellbooks__header">TOP SELLERS IN BOOKS FOR YOU</h3>
-                <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
-                </a>
-                <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
-                </a>
-                <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
-                </a>
-                <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
-                </a>
-                <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
-                </a>
-                <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
-                </a>
-                <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
-                </a>
-                <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
-                </a>
-            </div>
-        </section>
-        <!-- •| #(SECTION 3 - TOP SELLERS IN BOOKS FOR YOU) end |◄◄◄◄◄◄◄◄◄◄ -->
-        <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
-        <!-- ►►►►►►►►►►| #(SECTION 4 - EXPLORE POPULAR BRANDS) start |• -->
-        <section id="section4-exppopbrands">
-            <!-- explore popular brands section -->
-            <div class="section2-exppopbrands">
-                <!-- explore popular brands section header -->
-                <h3 class="section2-exppopbrands__header">Explore Popular Brands</h3>
-                <!-- explore popular brands section cards container -->
-                <div class="section2-exppopbrands__container">
-                    <!-- explore popular brands section cards container circles 1 -->
-                    <a href="#" class="section2-exppopbrands__container--cards">
-                        <div class="section2-exppopbrands__container--cards_cover">
-                            <img src="." alt="bcards-images" class="section2-exppopbrands__container--cards_cover-img">
-                        </div>
-                        <p class="section2-exppopbrands__container--cards_name"></p>
-                    </a>
-                    <!-- explore popular brands section cards container circles 2 -->
-                    <a href="#" class="section2-exppopbrands__container--cards">
-                        <div class="section2-exppopbrands__container--cards_cover">
-                            <img src="." alt="bcards-images" class="section2-exppopbrands__container--cards_cover-img">
-                        </div>
-                        <p class="section2-exppopbrands__container--cards_name"></p>
-                    </a>
-                    <!-- explore popular brands section cards container circles 3 -->
-                    <a href="#" class="section2-exppopbrands__container--cards">
-                        <div class="section2-exppopbrands__container--cards_cover">
-                            <img src="." alt="bcards-images" class="section2-exppopbrands__container--cards_cover-img">
-                        </div>
-                        <p class="section2-exppopbrands__container--cards_name"></p>
-                    </a>
-                    <!-- explore popular brands section cards container circles 4 -->
-                    <a href="#" class="section2-exppopbrands__container--cards">
-                        <div class="section2-exppopbrands__container--cards_cover">
-                            <img src="." alt="bcards-images" class="section2-exppopbrands__container--cards_cover-img">
-                        </div>
-                        <p class="section2-exppopbrands__container--cards_name"></p>
-                    </a>
-                    <!-- explore popular brands section cards container circles 5 -->
-                    <a href="#" class="section2-exppopbrands__container--cards">
-                        <div class="section2-exppopbrands__container--cards_cover">
-                            <img src="." alt="bcards-images" class="section2-exppopbrands__container--cards_cover-img">
-                        </div>
-                        <p class="section2-exppopbrands__container--cards_name"></p>
-                    </a>
-                </div>
-            </div>
-        </section>
-        <!-- •| #(SECTION 4 - EXPLORE POPULAR BRANDS) end |◄◄◄◄◄◄◄◄◄◄ -->
+        <!-- •| #($$$$$) end |◄◄◄◄◄◄◄◄◄◄ -->
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
         <!-- ►►►►►►►►►►| #(FOOTER) start |• -->
         <footer id="footer">
@@ -784,72 +615,6 @@
         <!-- ►►►►►►►►►►| #(JAVASCRIPT LINK) start |• -->
         <script src="./Ploranza.js"></script>
         <!-- •| #(JAVASCRIPT LINK) end |◄◄◄◄◄◄◄◄◄◄ -->
-        <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
-        <!-- ►►►►►►►►►►| #(TEMPORARY HIDDEN LABEL FOR FONTAWESOME ICONS) start |• -->
-        <div class="hidden">
-            <!-- <i class="fa-solid fa-sun fa-1x"></i> -->
-            <!-- <i class="fa-regular fa-moon fa-1x"></i> -->
-            <!-- <i class="fa-solid fa-magnifying-glass fa-1x"></i> -->
-            <!-- <i class="fa-solid fa-circle-user fa-1x"></i> -->
-            <i class="fa-solid fa-heart fa-1x"></i> <!-- add product to favorites -->
-            <!-- <i class="fa-solid fa-cart-shopping fa-1x"></i> -->
-            <!-- <i class="fa-solid fa-globe fa-1x"></i> -->
-            <!-- <i class="fa-brands fa-cc-visa fa-1x"></i> -->
-            <!-- <i class="fa-brands fa-cc-mastercard fa-1x"></i> -->
-            <!-- <i class="fa-brands fa-cc-paypal fa-1x"></i> -->
-            <!-- <i class="fa-brands fa-bitcoin fa-1x"></i> -->
-            <!-- <i class="fa-regular fa-credit-card fa-1x"></i> -->
-            <!-- <i class="fa-solid fa-circle-info fa-1x"></i> -->
-            <!-- <i class="fa-solid fa-laptop-code fa-1x"></i> -->
-            <!-- <i class="fa-solid fa-headset fa-1x"></i> -->
-            <!-- <i class="fa-solid fa-hand-holding-dollar fa-1x"></i> -->
-            <!-- <i class="fa-solid fa-map-location-dot fa-1x"></i> -->
-            <!-- <i class="fa-brands fa-facebook fa-1x"></i> -->
-            <!-- <i class="fa-brands fa-twitter fa-1x"></i> -->
-            <!-- <i class="fa-brands fa-square-instagram fa-1x"></i> -->
-            <!-- <i class="fa-brands fa-youtube fa-1x"></i> -->
-            <!-- <i class="fa-solid fa-envelope fa-1x"></i> -->
-            <!-- <i class="fa-solid fa-question fa-1x"></i> -->
-            <!-- <i class="fa-brands fa-rocketchat fa-1x"></i> -->
-            <!-- <i class="fa-solid fa-shield-halved fa-1x"></i> -->
-            <!-- <i class="fa-solid fa-arrow-left-long fa-1x"></i> -->
-            <!-- <i class="fa-solid fa-share-from-square fa-1x"></i> share product link with friends -->
-            <!-- <i class="fa-solid fa-arrow-right-from-bracket fa-1x"></i> log out -->
-            <!-- <i class="fa-solid fa-thumbs-up fa-1x"></i> like -->
-            <!-- <i class="fa-solid fa-thumbs-down fa-1x"></i> dislike -->
-            <i class="fa-solid fa-star fa-1x"></i> <!-- 5 start filled -->
-            <i class="fa-solid fa-star-half-stroke fa-1x"></i> <!-- 5 start half -->
-            <i class="fa-regular fa-star fa-1x"></i> <!-- 5 start empty -->
-            <!-- <i class="fa-solid fa-square-share-nodes fa-1x"></i> share on social network -->
-            <i class="fa-regular fa-comment fa-1x"></i> <!-- comments -->
-            <!-- <i class="fa-solid fa-bell fa-1x"></i> notifications -->
-            <!-- <i class="fa-brands fa-linkedin fa-1x"></i> linkedin -->
-            <!-- <i class="fa-brands fa-discord fa-1x"></i> discord -->
-            <!-- <i class="fa-solid fa-eye fa-1x"></i> visible -->
-            <!-- <i class="fa-solid fa-eye-slash fa-1x"></i> invisible -->
-            <i class="fa-solid fa-bars fa-1x"></i> <!-- menu bars -->
-            <i class="fa-solid fa-x fa-1x"></i> <!-- menu close -->
-            <!-- <i class="fa-solid fa-ellipsis-vertical fa-1x"></i> item options dots -->
-            <i class="fa-solid fa-clock fa-1x"></i> <!-- clock -->
-            <i class="fa-solid fa-magnifying-glass-plus fa-1x"></i> <!-- zoom in -->
-            <i class="fa-solid fa-magnifying-glass-minus fa-1x"></i> <!-- zoom out -->
-            <i class="fa-solid fa-circle-check fa-1x"></i> <!-- verified seller -->
-            <i class="fa-solid fa-chevron-left fa-1x"></i> <!-- pagination previous page -->
-            <i class="fa-solid fa-chevron-right fa-1x"></i> <!-- pagination next page -->
-            <i class="fa-solid fa-list fa-1x"></i> <!-- menu list view -->
-            <i class="fa-solid fa-grip fa-1x"></i> <!-- menu blocks view -->
-            <!-- <i class="fa-solid fa-gear fa-1x"></i> account preferences -->
-            <!-- <i class="fa-solid fa-house-chimney fa-1x"></i> go to homepage -->
-            <!-- <i class="fa-regular fa-copyright fa-1x"></i> copyright -->
-            <!-- <i class="fa-solid fa-play fa-1x"></i> play button -->
-            <!-- <i class="fa-solid fa-pause fa-1x"></i> pause button -->
-            <i class="fa-solid fa-sliders fa-1x"></i> <!-- filtering products -->
-            <i class="fa-solid fa-dollar-sign fa-1x"></i> <!-- usd -->
-            <i class="fa-solid fa-layer-group fa-1x"></i> <!-- layers -->
-            <i class="fa-regular fa-calendar fa-1x"></i> <!-- calendar -->
-            <i class="fa-solid fa-sort fa-1x"></i> <!-- sorting button maybe -->
-        </div>
-        <!-- •| #(TEMPORARY HIDDEN LABEL FOR FONTAWESOME ICONS) end |◄◄◄◄◄◄◄◄◄◄ -->
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
     </body>
 </html>
