--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-pagination.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-pagination.html
@@ -29,6 +29,19 @@
     </head>
     <body>
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
+        <!-- ►►►►►►►►►►| #(MENU BUTTON FOR RESPONSIVE NAVBAR AND HEADER) start |• -->
+        <button class="mobile-menu">
+            <i class="fa-solid fa-bars fa-1x"></i> <!-- menu bars -->
+            <i class="fa-solid fa-xmark fa-1x hidden"></i> <!-- menu close -->
+        </button>
+        <!-- •| #(MENU BUTTON FOR RESPONSIVE NAVBAR AND HEADER) end |◄◄◄◄◄◄◄◄◄◄ -->
+        <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
+        <!-- ►►►►►►►►►►| #(SCROLL UP BUTTON) start |• -->
+        <button class="scroll-top">
+            ▲
+        </button>
+        <!-- •| #(SCROLL UP BUTTON) end |◄◄◄◄◄◄◄◄◄◄ -->
+        <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
         <!-- ►►►►►►►►►►| #(HEADER) start |• -->
         <header id="header">
             <div class="header">
