--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-signin-register.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-signin-register.html
@@ -29,12 +29,13 @@
     </head>
     <body>
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
-        <!-- ►►►►►►►►►►| #(SECTION - Authentication) start |• -->
-        <section id="breadcrumb"></section>
+        <!-- ►►►►►►►►►►| #(SECTION - AUTHENTICATION) start |• -->
         <section id="section-auth">
+            <!-- go back homepage button -->
             <button class="section-auth__gobackhome">
                 <i class="fa-solid fa-house-chimney fa-1x"></i> 
             </button>
+            <!-- choose sign in or sign up to swap menus -->
             <div class="section-auth__buttons">
                 <button class="section-auth__buttons--login">LOGIN</button>
                 <button class="section-auth__buttons--register">REGISTER</button>
@@ -183,7 +184,7 @@
                 </form>
             </div>
         </section>
-        <!-- •| #(SECTION 1 - ?) end |◄◄◄◄◄◄◄◄◄◄ -->
+        <!-- •| #(SECTION - AUTHENTICATION) end |◄◄◄◄◄◄◄◄◄◄ -->
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
         <!-- ►►►►►►►►►►| #(JAVASCRIPT LINK) start |• -->
         <script src="./Ploranza.js"></script>
