--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
@@ -29,6 +29,19 @@
     </head>
     <body>
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
+        <!-- ►►►►►►►►►►| #(MENU BUTTON FOR RESPONSIVE NAVBAR AND HEADER) start |• -->
+        <button class="mobile-menu">
+            <i class="fa-solid fa-bars fa-1x"></i> <!-- menu bars -->
+            <i class="fa-solid fa-xmark fa-1x hidden"></i> <!-- menu close -->
+        </button>
+        <!-- •| #(MENU BUTTON FOR RESPONSIVE NAVBAR AND HEADER) end |◄◄◄◄◄◄◄◄◄◄ -->
+        <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
+        <!-- ►►►►►►►►►►| #(SCROLL UP BUTTON) start |• -->
+        <button class="scroll-top">
+            ▲
+        </button>
+        <!-- •| #(SCROLL UP BUTTON) end |◄◄◄◄◄◄◄◄◄◄ -->
+        <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
         <!-- ►►►►►►►►►►| #(HEADER) start |• -->
         <header id="header">
             <div class="header">
@@ -828,7 +841,7 @@
             <!-- <i class="fa-solid fa-eye fa-1x"></i> visible -->
             <!-- <i class="fa-solid fa-eye-slash fa-1x"></i> invisible -->
             <i class="fa-solid fa-bars fa-1x"></i> <!-- menu bars -->
-            <i class="fa-solid fa-x fa-1x"></i> <!-- menu close -->
+            <i class="fa-solid fa-xmark fa-1x"></i> <!-- menu close -->
             <!-- <i class="fa-solid fa-ellipsis-vertical fa-1x"></i> item options dots -->
             <i class="fa-solid fa-clock fa-1x"></i> <!-- clock -->
             <i class="fa-solid fa-magnifying-glass-plus fa-1x"></i> <!-- zoom in -->
