--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-productspage.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-productspage.html
@@ -413,7 +413,10 @@
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
         <!-- ►►►►►►►►►►| #($$$$$) start |• -->
         <section id="$$$$$">
-            <div class="$$$$$"></div>
+            <div class="$$$$$">.
+                <i class="fa-solid fa-heart fa-1x"></i> <!-- add product to favorites -->
+                <i class="fa-solid fa-cart-shopping fa-1x"></i> <!-- add product to cart -->
+            </div>
         </section>
         <!-- •| #($$$$$) end |◄◄◄◄◄◄◄◄◄◄ -->
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
