--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
@@ -804,7 +804,7 @@
             <!-- <i class="fa-regular fa-moon fa-1x"></i> -->
             <!-- <i class="fa-solid fa-magnifying-glass fa-1x"></i> -->
             <!-- <i class="fa-solid fa-circle-user fa-1x"></i> -->
-            <i class="fa-solid fa-heart fa-1x"></i> <!-- add product to favorites -->
+            <!-- <i class="fa-solid fa-heart fa-1x"></i> add product to favorites -->
             <!-- <i class="fa-solid fa-cart-shopping fa-1x"></i> -->
             <!-- <i class="fa-solid fa-globe fa-1x"></i> -->
             <!-- <i class="fa-brands fa-cc-visa fa-1x"></i> -->
@@ -830,37 +830,37 @@
             <!-- <i class="fa-solid fa-arrow-right-from-bracket fa-1x"></i> log out -->
             <!-- <i class="fa-solid fa-thumbs-up fa-1x"></i> like -->
             <!-- <i class="fa-solid fa-thumbs-down fa-1x"></i> dislike -->
-            <i class="fa-solid fa-star fa-1x"></i> <!-- 5 start filled -->
-            <i class="fa-solid fa-star-half-stroke fa-1x"></i> <!-- 5 start half -->
-            <i class="fa-regular fa-star fa-1x"></i> <!-- 5 start empty -->
+            <!-- <i class="fa-solid fa-star fa-1x"></i> 5 start filled -->
+            <!-- <i class="fa-solid fa-star-half-stroke fa-1x"></i> 5 start half -->
+            <!-- <i class="fa-regular fa-star fa-1x"></i> 5 start empty -->
             <!-- <i class="fa-solid fa-square-share-nodes fa-1x"></i> share on social network -->
-            <i class="fa-regular fa-comment fa-1x"></i> <!-- comments -->
+            <!-- <i class="fa-regular fa-comment fa-1x"></i> comments -->
             <!-- <i class="fa-solid fa-bell fa-1x"></i> notifications -->
             <!-- <i class="fa-brands fa-linkedin fa-1x"></i> linkedin -->
             <!-- <i class="fa-brands fa-discord fa-1x"></i> discord -->
             <!-- <i class="fa-solid fa-eye fa-1x"></i> visible -->
             <!-- <i class="fa-solid fa-eye-slash fa-1x"></i> invisible -->
-            <i class="fa-solid fa-bars fa-1x"></i> <!-- menu bars -->
-            <i class="fa-solid fa-xmark fa-1x"></i> <!-- menu close -->
+            <!-- <i class="fa-solid fa-bars fa-1x"></i> menu bars -->
+            <!-- <i class="fa-solid fa-xmark fa-1x"></i> menu close -->
             <!-- <i class="fa-solid fa-ellipsis-vertical fa-1x"></i> item options dots -->
-            <i class="fa-solid fa-clock fa-1x"></i> <!-- clock -->
-            <i class="fa-solid fa-magnifying-glass-plus fa-1x"></i> <!-- zoom in -->
-            <i class="fa-solid fa-magnifying-glass-minus fa-1x"></i> <!-- zoom out -->
-            <i class="fa-solid fa-circle-check fa-1x"></i> <!-- verified seller -->
-            <i class="fa-solid fa-chevron-left fa-1x"></i> <!-- pagination previous page -->
-            <i class="fa-solid fa-chevron-right fa-1x"></i> <!-- pagination next page -->
-            <i class="fa-solid fa-list fa-1x"></i> <!-- menu list view -->
-            <i class="fa-solid fa-grip fa-1x"></i> <!-- menu blocks view -->
+            <!-- <i class="fa-solid fa-clock fa-1x"></i> clock -->
+            <!-- <i class="fa-solid fa-magnifying-glass-plus fa-1x"></i> zoom in -->
+            <!-- <i class="fa-solid fa-magnifying-glass-minus fa-1x"></i> zoom out -->
+            <!-- <i class="fa-solid fa-circle-check fa-1x"></i> verified seller -->
+            <!-- <i class="fa-solid fa-chevron-left fa-1x"></i> pagination previous page -->
+            <!-- <i class="fa-solid fa-chevron-right fa-1x"></i> pagination next page -->
+            <!-- <i class="fa-solid fa-list fa-1x"></i> menu list view -->
+            <!-- <i class="fa-solid fa-grip fa-1x"></i> menu blocks view -->
             <!-- <i class="fa-solid fa-gear fa-1x"></i> account preferences -->
             <!-- <i class="fa-solid fa-house-chimney fa-1x"></i> go to homepage -->
             <!-- <i class="fa-regular fa-copyright fa-1x"></i> copyright -->
             <!-- <i class="fa-solid fa-play fa-1x"></i> play button -->
             <!-- <i class="fa-solid fa-pause fa-1x"></i> pause button -->
-            <i class="fa-solid fa-sliders fa-1x"></i> <!-- filtering products -->
-            <i class="fa-solid fa-dollar-sign fa-1x"></i> <!-- usd -->
-            <i class="fa-solid fa-layer-group fa-1x"></i> <!-- layers -->
-            <i class="fa-regular fa-calendar fa-1x"></i> <!-- calendar -->
-            <i class="fa-solid fa-sort fa-1x"></i> <!-- sorting button maybe -->
+            <!-- <i class="fa-solid fa-sliders fa-1x"></i> filtering products -->
+            <!-- <i class="fa-solid fa-dollar-sign fa-1x"></i> usd -->
+            <!-- <i class="fa-solid fa-layer-group fa-1x"></i> layers -->
+            <!-- <i class="fa-regular fa-calendar fa-1x"></i> calendar -->
+            <!-- <i class="fa-solid fa-sort fa-1x"></i> sorting button maybe -->
         </div>
         <!-- •| #(TEMPORARY HIDDEN LABEL FOR FONTAWESOME ICONS) end |◄◄◄◄◄◄◄◄◄◄ -->
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
